# AnyClaw_LVGL

./: .gitattributes  .gitignore  AGENTS.md  BUG_TRACKER.md  CMakeLists.txt  FEATURE_LIST.md  IMPLEMENT_P0_REPORT.md  PRD_v2.0.md  TASK_PRIORITY.md  TEST_PLAN_v1.0.md  TEST_RESULTS_v1.0.md  _build.bat  analyze_font.py  bring_front.ps1  build.bat  build.ps1  build_msvc.ps1  build_rebuild.bat  build_watch.ps1  cap_final.ps1  capture.cs  capture.ps1  capture2.ps1  capture3.ps1  capture4.ps1  capture_app.ps1  capture_app2.ps1  capture_final.ps1  capture_full.ps1  check_bitmap.py  check_depth.ps1  check_font.py  check_font2.py  check_sourcehan.py  check_strings.py  check_subset_ttf.py  click_settings.py  commit_msg.txt  compare_chars.py  debug_font.py  (+25 more)
.github/skills/anyclaw-runtime-gui-debug/: SKILL.md
.github/workflows/: build.yml
artifacts/: README.md
build-windows/: cmake_install.cmake
build-windows/AnyClaw_LVGL.dir/Release/: AnyClaw_LVGL.exe.recipe  AnyClaw_LVGL.res
build-windows/AnyClaw_LVGL.dir/Release/AnyClaw_LVGL.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
build-windows/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build-windows/x64/Release/ALL_BUILD/ALL_BUILD.tlog/: CustomBuild.command.1.tlog
build-windows/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build-windows/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build2/: CMakeCache.txt
bundled/claude/: download-claude.ps1
bundled/hermes/: install-hermes.ps1
bundled/wine11/: install-wine11.sh  wine-stable-amd64_11.0.0.0~noble-1_amd64.deb  wine-stable_11.0.0.0~noble-1_amd64.deb  winehq-stable_11.0.0.0~noble-1_amd64.deb
bundled/workspace/: AGENTS.md  MEMORY.md
bundled/workspace/.openclaw-skills/: .skills_store_lock.json
bundled/workspace/memory/: 2026-04-15.md
bundled/workspace/memory/anyclaw/: v2.2.1-verify.md
docs/: 4T-07-design.md  AnyClaw_LVGL_GROWTH_v2.2.1.md  AnyClaw_LVGL_PRD.md  AnyClaw_LVGL_PRD_v2.2.1.md  AnyClaw_LVGL_PRD_v2.2.1_Design_System.md  AnyClaw_LVGL_PRD_v2.2.1_UI_layouts.md  AnyClaw_LVGL_PRD_v2.2.1_alignment_report.md  AnyClaw_LVGL_TASK_v2.2.1.md  AnyClaw_LVGL_build_guide.md  AnyClaw_LVGL_code_alignment.md  AnyClaw_LVGL_task_log.md  AnyClaw_LVGL_v2.0_PRD.md  AnyClaw_LVGL_v2.0_build_guide.md  AnyClaw_LVGL_v2.0_code_alignment.md  AnyClaw_LVGL_v2.0_task_test.md  AnyClaw_LVGL_windows_build.md  AnyClaw_v2.0_Design_Spec.md  BUILD.md  Design.md  PRD.md  README.md  TODO-v2.2.2.md  anyclaw_gui_parallel_checklist.md  ui-gap-tracker.md
docs/UI/anyclaw_wireframes_Matcha_v1/: README.md
icons/ui/: d5196808-1d05-4c72-ba5d-fe7d00ae86be  d776c561-9c36-482e-bf27-b209e0335bd8  df05c5d1-6feb-4efd-a00a-f443c8f788b4
scripts/: build-freetype-mingw.sh  capture_about.cs  capture_menu.cs  capture_menu2.cs  capture_menu3.cs  capture_tray.cs  capture_tray2.cs  capture_tray3.cs  capture_tray4.cs  capture_tray5.cs  capture_tray6.cs  capture_tray7.cs  gen_sounds.py  generate-assets.sh  install-hermes.ps1  install-hermes.sh  verify-docs.sh
src/: AnyClaw_LVGL.manifest  AnyClaw_LVGL.rc  anim.cpp  anim.h  app.h  app_config.h  app_log.cpp  app_log.h  async_task.cpp  async_task.h  autostart.cpp  boot_check.cpp  boot_check.h  feature_flags.cpp  feature_flags.h  ftp_client.cpp  ftp_client.h  garlic_dock.cpp  garlic_dock.h  health.cpp  health.h  http_client.cpp  icon_config.h  json_util.cpp  json_util.h  kb_store.cpp  kb_store.h  lan_chat_client.cpp  lan_chat_client.h  lan_chat_protocol.cpp  lan_chat_protocol.h  lan_chat_types.h  lang.h  license.cpp  license.h  lv_conf.h  lv_font_mshy_16.c  lv_font_mshy_16.c.bak  lv_font_mshy_16_new.c  lv_font_mshy_16_test.c  (+41 more)
src/widgets/: aw_button.h  aw_common.h  aw_form.h  aw_input.h  aw_label.h  aw_panel.h
tasks/: AGENTS.md  MEMORY.md  START_HERE.md  session-2026-04-14.md  session-2026-04-15.md  v2.2.1-dev.md  v2.2.1-scan.md  verification-plan.md
tools/: extract_chinese.py  extract_ttf.py  gen_font_api.js  gen_font_compressed.js  gen_font_full.py  gen_font_full_range.js  gen_font_node.js  gen_font_practical.py  gen_font_practical2.js  gen_font_quick.js  gen_font_stdin.js  gen_font_subset.py  gen_font_subset2.py  keygen.py
tools/common/: package_windows_full_runtime.ps1  package_windows_full_runtime.sh
tools/linux/: .env-path.sh  build-linux.sh  build-win.sh  build.sh  prepare-bundled.sh  run-wine.sh  setup-build-env.sh  setup-env.sh  setup-sdl2-mingw.sh  toolchain-mingw64.cmake
tools/src/: lv_font_mshy_16.c
tools/windows/: build-package.bat  build.bat  fetch-runtime-deps.bat  setup-env.bat
ui/anyclaw_wireframes_Matcha_v1/: README.md
ui/anyclaw_wireframes_Peachy_v2/: README.md
ui/mochi_v3/: README.md
